# WEB_HW_13

./: main.py  pyproject.toml
migrations/versions/: 6eaa6853987d_init.py  ee2d8ad07b41_init.py
postgres-data/: postmaster.pid
postgres-data/base/13458/: 16395  16406  2224  pg_internal.init
postgres-data/global/: pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13458.stat  global.stat
src/: valid_schemas.py
src/repository/: users.py
src/routes/: route_auth.py  route_contacts.py  route_users.py
src/services/: auth.py  email.py
test/: test_unit_repository_metho_contacts.py  test_unit_repository_users.py
